Closed
Bug 1128449
Opened 10 years ago
Closed 10 years ago
MIPS simulators should not crash on stack allocation failure
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox38 | --- | fixed |
People
(Reporter: lth, Assigned: lth)
References
Details
Attachments
(1 file)
5.86 KB,
patch
|
lth
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1127777 +++
The constructor should be split up to allow proper signaling of OOM. This is not hard. Crashes are encountered during jsapi-tests' OOM testing currently due to stack allocation failure, but a fragmented malloc heap can easily cause such OOM.
This bug pertains to MIPS. I'm forking it because the MIPS assembler does not currently compile.
Assignee | ||
Comment 1•10 years ago
|
||
Carrying forward r+ from jandem, see bug 1127777.
Attachment #8557831 -
Flags: review+
Assignee | ||
Comment 2•10 years ago
|
||
Comment 3•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in
before you can comment on or make changes to this bug.
Description
•