Bug 1128449 - MIPS simulator: split the constructor to allow OOM signaling.  r=jandem